Fixed Makefile Godep to glide dependency

--- a/gorb-docker-link/Makefile
+++ b/gorb-docker-link/Makefile
@@ -2,10 +2,10 @@ all: push
 
 # 0.0 shouldn't clobber any release builds
 TAG = 0.0
-PREFIX = kobolog/gorb-docker-link
+PREFIX = test/gorb-docker-link
 
 binary: main.go
-	CGO_ENABLED=0 GOOS=linux godep go build -a -ldflags '-w' -o docker/gorb-docker-link
+	CGO_ENABLED=0 GOOS=linux  go build -a -ldflags '-w' -o docker/gorb-docker-link
 
 container: binary
 	docker build -t $(PREFIX):$(TAG) docker
